--- a/source/configs/afifi.yaml
+++ b/source/configs/afifi.yaml
@@ -29,7 +29,7 @@ trainer:
   limit_val_batches: null
   limit_test_batches: null
   limit_predict_batches: null
-  val_check_interval: null
+  val_check_interval: 3
   log_every_n_steps: 50
   accelerator: null
   strategy: null
@@ -68,7 +68,7 @@ model:
 data:
   class_path: data.AfifiDataModule
   init_args:
-    data_root: ../data_root/afifi/
+    data_root: ../data_root/cr2_afifi/
     train_batch_size: 64
     val_batch_size: 4
     num_workers: 4
