--- a/source/configs/afifi.yaml
+++ b/source/configs/afifi.yaml
@@ -1,9 +1,15 @@
 # pytorch_lightning==1.7.7
-seed_everything: 42
 trainer:
   logger: true
   enable_checkpointing: true
-  callbacks: null
+  callbacks:
+      - class_path: pytorch_lightning.callbacks.ModelCheckpoint
+        init_args:
+          filename: "{epoch:02d}-{val_loss:.2f}"
+          every_n_epochs: 3
+          save_last: true
+          monitor: val_loss
+          mode: min
   default_root_dir: ../workdirs
   gradient_clip_val: null
   gradient_clip_algorithm: null
@@ -29,8 +35,8 @@ trainer:
   limit_val_batches: null
   limit_test_batches: null
   limit_predict_batches: null
-  val_check_interval: 3
-  log_every_n_steps: 50
+  val_check_interval: null
+  log_every_n_steps: 1
   accelerator: null
   strategy: null
   sync_batchnorm: false
@@ -63,7 +69,7 @@ model:
     gamma_lower: -2
     gamma_upper: 3
     number_refs: 1
-    lr: 5e-4
+    lr: 1e-3
     afifi_evaluation: true
 data:
   class_path: data.AfifiDataModule
