--- a/source/configs/afifi.yaml
+++ b/source/configs/afifi.yaml
@@ -15,8 +15,8 @@ trainer:
   gradient_clip_algorithm: null
   num_nodes: 1
   num_processes: null
-  devices: null
-  gpus: 1
+  devices: 1
+  gpus: 0
   auto_select_gpus: false
   tpu_cores: null
   ipus: null
